# ZK-trading

./: .gitattributes  .gitignore  AGENTS.md  README.md
backend/: .env.example  pyproject.toml  test_stage7.py
backend/app/: __init__.py  config.py  decision.py  main.py  models.py
backend/app/agent_control/: __init__.py  learning_extraction.py  outcome_labeling.py  paper_simulation.py  paper_simulation_evaluation.py  sandbox_experiments.py  service.py  signal_performance.py
backend/app/ai/: __init__.py  model_gateway.py  model_service.py  review_worker.py  weight_optimizer.py
backend/app/api/: routes.py
backend/app/automation/: __init__.py  supervisor.py
backend/app/backtest/: __init__.py  engine.py  execution.py  ledger.py  metrics.py
backend/app/candidates/: __init__.py  auto_discovery.py  (+4 more)
backend/configs/: demo_seed.json  rules.yaml  user_knowledge_seed.json
backend/scripts/: automation_loop.py  code_evolution_validate.py  import_legacy_data.py  start_codex_safe_task_loop.ps1  start_intraday_monitor_loop.ps1  start_safe_simulation_loop.ps1  verify_stage14.py
backend/tests/: conftest.py  test_ai_model_gateway_service.py  test_api_contracts.py  test_backtest_engine.py  test_code_evolution.py  test_data_fallback.py  test_data_quality_gates.py  test_dataset2_readiness.py  test_dengzhan_signals.py  test_experience_memory.py  test_offhour_research.py  test_price_limits.py  test_realtime_market.py  test_rules_engine.py  test_safety.py  test_screen_monitoring.py  test_sim_cockpit.py  test_simulation.py  test_trade_execution_gateway.py  test_v15_services.py
(+253 files in other folders)
