[project]
name = "a-share-ai-trading-system"
version = "0.1.0"
description = "Local-first A-share AI monitoring and simulation trading system"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.14.0",
    "fastapi>=0.110.0",
    "pandas>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
